--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <title>Template</title>
 </head>
 <body>
-    <section>
+    <section class="myClass">
         <p>
             <a href="git@github.com:ImportFromCBastian/LearningGit.git"> 
                 <img src="GitHub-logo.png>
