Added, stylesheet, ASM file and something else that im missing

--- a/test.html
+++ b/test.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head></head>
+    <link rel="stylesheet" href="style.css"></link>
+    <script src="jSFile.js"></script>
     <title>Template</title>
 </head>
 <body>
-    <section class="myClass">
+    <section>
         <p>
-            <a href="git@github.com:ImportFromCBastian/LearningGit.git"> 
-                <img src="GitHub-logo.png>
+            <a  href="https://github.com/ImportFromCBastian" target="_blank"> 
+                <img class="img-git"  src="GitHub-logo.png">
             </a>
         </p>
     </section>
